Configuraton added for module-based execution examples